test, 개발 용도 SiteUser 도입, Busket 엔티티 생성

--- a/src/main/resources/templates/design/map/modify_plan.html
+++ b/src/main/resources/templates/design/map/modify_plan.html
@@ -302,7 +302,7 @@
     <div style="width:20%; height:80%;">
         <div class="card card py-3 mb-4" style="width:100%; height:85%;">
             <div class="text-center py-3 mb-2">채팅방</div>
-            <div class="busket">
+            <div class="chat">
 
             </div>
         </div>
