--- a/src/main/resources/templates/design/map/plan_list.html
+++ b/src/main/resources/templates/design/map/plan_list.html
@@ -3,9 +3,18 @@
     <!-- start -->
     <div class="main-content-container container-fluid px-4">
         <div class="row">
-            <div th:each="plan : ${paging}" class="col-lg-3 col-md-6 col-sm-12 mb-4">
+            <a th:if="${paging.getTotalElements() == 0}" class="col-lg-3 col-md-6 col-sm-12 mb-4" th:href="@{/travel/design/new}">
                 <div class="card card-small card-post h-100 mt-3">
                     <div class="card-post__image" th:style="'background-image: url(https://picsum.photos/800);'"></div>
+                    <div class="card-footer text-muted border-top py-3">
+                        <h5>플래너를 추가해보세요!</h5>
+                    </div>
+                </div>
+            </a>
+            <div th:each="plan : ${paging}" class="col-lg-3 col-md-6 col-sm-12 mb-4">
+                <div class="card card-small card-post h-100 mt-3">
+                    <div class="card-post__image"
+                         th:style="'background-image: url(https://picsum.photos/800);'"></div>
                     <div class="card-footer text-muted border-top py-3">
                         <div>
                             <h4 class="card-title col">
@@ -16,12 +25,14 @@
                         <div class="d-flex justify-content-between border-bottom border-1 pb-2 mb-2">
                             <div>
                                 <h5 class="card-title col">
-                                    <span th:text="5명" class="text-danger small ms-2"></span> <!-- |${plan.member.size()}명| 구성원수-->
+                                    <span th:text="n명" class="text-danger small ms-2"></span>
+                                    <!-- |${plan.member.size()}명| 구성원수-->
                                     <span th:text="|${plan.size}일|" class="text-dark small ms-2"></span>
                                 </h5>
                             </div>
                             <div class="btn-group">
-                                <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                                <button type="button" class="btn btn-secondary dropdown-toggle"
+                                        data-bs-toggle="dropdown" aria-expanded="false">
                                     option
                                 </button>
                                 <ul class="dropdown-menu">
@@ -29,21 +40,21 @@
                                            th:href="@{|/travel/design/modification/basic/${plan.id}|}">수정</a></li>
                                     <li><a class="dropdown-item"
                                            th:href="@{|/travel/design/detail/${plan.id}?order=1|}">상세</a></li>
-                                    <li> <a class="dropdown-item"
-                                            onclick="if(!confirm('정말로 삭제하시겠습니까?')) return false;"
-                                            th:href="@{|/travel/design/plan/delete/${plan.id}|}">삭제</a></li>
+                                    <li><a class="dropdown-item"
+                                           onclick="if(!confirm('정말로 삭제하시겠습니까?')) return false;"
+                                           th:href="@{|/travel/design/plan/delete/${plan.id}|}">삭제</a></li>
                                 </ul>
                             </div>
                         </div>
-<!--                        <div class="d-flex justify-content-around border-bottom-1 mb-2">-->
-<!--                            <a class="btn btn-outline-secondary p-2 px-4 mx-1"-->
-<!--                               th:href="@{|/travel/design/modification/basic/${plan.id}|}">수정</a>-->
-<!--                            <a class="btn btn-outline-secondary p-2 px-4 mx-1"-->
-<!--                               th:href="@{|/travel/design/detail/${plan.id}?order=1|}">상세</a>-->
-<!--                            <a class="btn btn-outline-secondary p-2 px-4 mx-1"-->
-<!--                               onclick="if(!confirm('정말로 삭제하시겠습니까?')) return false;"-->
-<!--                               th:href="@{|/travel/design/plan/delete/${plan.id}|}">삭제</a>-->
-<!--                        </div>-->
+                        <!--                        <div class="d-flex justify-content-around border-bottom-1 mb-2">-->
+                        <!--                            <a class="btn btn-outline-secondary p-2 px-4 mx-1"-->
+                        <!--                               th:href="@{|/travel/design/modification/basic/${plan.id}|}">수정</a>-->
+                        <!--                            <a class="btn btn-outline-secondary p-2 px-4 mx-1"-->
+                        <!--                               th:href="@{|/travel/design/detail/${plan.id}?order=1|}">상세</a>-->
+                        <!--                            <a class="btn btn-outline-secondary p-2 px-4 mx-1"-->
+                        <!--                               onclick="if(!confirm('정말로 삭제하시겠습니까?')) return false;"-->
+                        <!--                               th:href="@{|/travel/design/plan/delete/${plan.id}|}">삭제</a>-->
+                        <!--                        </div>-->
                         <div><p th:text="${plan.memo}" class="card-text"></p></div>
                     </div>
                 </div>
