--- a/src/main/resources/templates/layout/fragments/script.html
+++ b/src/main/resources/templates/layout/fragments/script.html
@@ -13,6 +13,7 @@
         <script type="text/javascript" th:src="@{/scripts/shards-dashboards.1.1.0.min.js}"></script>
         <script type="text/javascript" th:src="@{/scripts/app/app-blog-overview.1.1.0.js}"></script>
         <script th:src="@{/bootstrap.bundle.js}"></script>
+        <script th:src="@{/scripts/map.js}"></script>
         <!--<script th:src="@{/bootstrap.min.js}"></script>-->
 
     </th:block>
