9월 9일 마무리

--- a/src/main/resources/templates/design/map/modify_plan.html
+++ b/src/main/resources/templates/design/map/modify_plan.html
@@ -5,20 +5,7 @@
     <div class="card card py-3" style="width:20%; height:80%;">
         <div class="text-center mb-3">장바구니</div>
         <div class="busket row justify-content-center" style="overflow: scroll;">
-<!--            <div th:each="spot : ${plan.busket.spotList}"-->
-<!--                 class="p-2 border-bottom border-1 my-1">-->
-<!--                <a class="font-weight-bold" onclick=window.open("http://place.map.kakao.com/\${spot.urlId}")-->
-<!--                   th:text="${spot.name}"></a>-->
-<!--                <br>-->
-<!--                <span th:text="${spot.address}"></span>-->
-<!--                <br>-->
-<!--                <div class="btn-group float-right" role="group" aria-label="Basic outlined example">-->
-<!--                    <button type="button" class="btn btn-outline-primary">+</button>-->
-<!--                    <button type="button" class="btn btn-outline-primary" onclick="removeAtBusket(${spot.name}, this);">-->
-<!--                        x-->
-<!--                    </button>-->
-<!--                </div>-->
-<!--            </div>-->
+            <!-- 여기에 장바구니 목록 들어옴 -->
         </div>
     </div>
     <div class="mx-2" style="width: 65%; height: 80%">
