--- a/src/main/resources/templates/design/map/modify_plan.html
+++ b/src/main/resources/templates/design/map/modify_plan.html
@@ -2,6 +2,7 @@
 <div layout:fragment="content" class=" d-flex justify-content-around mt-3"
      style="width:95%; height:100%; position:absolute;">
     <input type="hidden" name="plan_id" th:value="${plan.id}">
+    <input type="hidden" name="course_id" th:value="${course.id}">
     <div class="card card py-3" style="width:20%; height:80%;">
         <div class="text-center mb-3">장바구니</div>
         <div class="busket row justify-content-center" style="overflow: scroll;">
@@ -22,7 +23,7 @@
                th:text="|${course.orders + 1}일차|"
                th:href="@{|?order=${course.orders + 1}|}"></a>
         </div>
-        <div class="card card mb-2" style="height:10%; height: 15%;">여행지 목록</div>
+        <div class="course card card mb-2 d-flex justify-content-around" style="height:10%; height: 15%;">여행지 목록</div>
         <!--지도-->
         <div class="map_wrap">
             <div id="map" style="width:100%;height:100%;position:absolute;overflow:hidden;"></div>
