--- a/src/main/resources/templates/design/map/modify_plan.html
+++ b/src/main/resources/templates/design/map/modify_plan.html
@@ -23,7 +23,7 @@
                th:text="|${course.orders + 1}일차|"
                th:href="@{|?order=${course.orders + 1}|}"></a>
         </div>
-        <div class="course card card mb-2 d-flex justify-content-around" style="height:10%; height: 15%;">여행지 목록</div>
+        <div class="course d-flex container justify-content-center mb-2" style="height:15%;"></div>
         <!--지도-->
         <div class="map_wrap">
             <div id="map" style="width:100%;height:100%;position:absolute;overflow:hidden;"></div>
