--- a/src/main/resources/templates/design/map/modify_plan.html
+++ b/src/main/resources/templates/design/map/modify_plan.html
@@ -5,7 +5,7 @@
     <input type="hidden" name="course_id" th:value="${course.id}">
     <div class="card card py-3" style="width:20%; height:80%;">
         <div class="text-center mb-3">장바구니</div>
-        <div class="busket row justify-content-center" style="overflow: scroll;">
+        <div class="busket row justify-content-center d-flex align-items-center" style="overflow: scroll;">
             <!-- 여기에 장바구니 목록 들어옴 -->
         </div>
     </div>
@@ -23,7 +23,8 @@
                th:text="|${course.orders + 1}일차|"
                th:href="@{|?order=${course.orders + 1}|}"></a>
         </div>
-        <div class="course card card mb-2 d-flex justify-content-around" style="height:10%; height: 15%;">여행지 목록</div>
+        <div class="course mb-2 d-flex bg-white shadow p-3 bg-body rounded"
+             style="height:10%; height: 15%; overflow: auto; white-space: nowrap;"></div>
         <!--지도-->
         <div class="map_wrap">
             <div id="map" style="width:100%;height:100%;position:absolute;overflow:hidden;"></div>
