일차별 코스에서 여행지 삭제 기능 구현

--- a/src/main/resources/templates/design/map/modify_plan.html
+++ b/src/main/resources/templates/design/map/modify_plan.html
@@ -23,7 +23,7 @@
                th:text="|${course.orders + 1}일차|"
                th:href="@{|?order=${course.orders + 1}|}"></a>
         </div>
-        <div class="course mb-2 d-flex bg-white shadow p-3 bg-body rounded"
+        <div class="course mb-2 d-flex bg-white shadow p-3 bg-body rounded justify-content-start"
              style="height:10%; height: 15%; overflow: auto; white-space: nowrap;"></div>
         <!--지도-->
         <div class="map_wrap">
