--- a/src/main/resources/templates/design/map/plan_list.html
+++ b/src/main/resources/templates/design/map/plan_list.html
@@ -39,7 +39,7 @@
                                     <li><a class="dropdown-item"
                                            th:href="@{|/travel/design/modification/basic/${plan.id}|}">수정</a></li>
                                     <li><a class="dropdown-item"
-                                           th:href="@{|/travel/design/detail/${plan.id}?order=1|}">상세</a></li>
+                                           th:href="@{|/travel/design/plan/detail/${plan.id}?order=1|}">상세</a></li>
                                     <li><a class="dropdown-item"
                                            onclick="if(!confirm('정말로 삭제하시겠습니까?')) return false;"
                                            th:href="@{|/travel/design/plan/delete/${plan.id}|}">삭제</a></li>
