여행지 상세페이지 담기 버튼 구현 & 여행계획 선택 화면 구현#1
# 여행계획 선택 화면에서 여행계획 선택 시
# 해당 여행계획의 장바구니에 여행지가 담기도록 구현
# by PlanController -> insertBusket 메서드

--- a/src/main/resources/templates/spot/spotDetail.html
+++ b/src/main/resources/templates/spot/spotDetail.html
@@ -45,7 +45,10 @@
                             <strong class="text-muted d-block mb-2">Description</strong>
                             <span th:text="|${spotDto.description}|"></span>
                             <br/>
-                            <button type="button" class="mt-2 mb-2 btn btn-sm btn-pill btn-outline-primary mx-auto" style="width: 70px;">담기</button>
+                            <form action="/spot/addBusket" method="get">
+                                <input type="hidden" name="spotId" th:value="${spotDto.id}">
+                                <button type="submit" formaction="/spot/addBusket" class="mt-2 mb-2 btn btn-sm btn-pill btn-outline-primary mx-auto" style="width: 70px;">담기</button>
+                            </form>
                         </li>
                     </ul>
                 </div>
