--- a/src/main/resources/templates/spot/addSpotAtBusket.html
+++ b/src/main/resources/templates/spot/addSpotAtBusket.html
@@ -1,6 +1,6 @@
 <html layout:decorate="~{layout/layout}">
 <div layout:fragment="content">
-    <form action="/travel/design/insertSpot" method="post">
+    <form action="/travel/design/insertSpot2" method="post">
         <span th:text="${spotDto.id}"></span>
         <select name="planId" id="plans">
             <th:block th:each="plan : ${plans}">
@@ -8,11 +8,7 @@
             </th:block>
             <input type="submit" value="Submit">
         </select>
-        <input type="hidden" name="name" th:value="${spotDto.name}">
-        <input type="hidden" name="address" th:value="${spotDto.address}">
-        <input type="hidden" name="urlId" th:value="${spotDto.urlId}">
-        <input type="hidden" name="x" th:value="${spotDto.x}">
-        <input type="hidden" name="y" th:value="${spotDto.y}">
+        <input type="hidden" name="spotId" th:value="${spotDto.id}">
     </form>
 </div>
 </html>
