plan_detail페이지 간단히 구현

--- a/src/main/resources/templates/design/map/modify_plan.html
+++ b/src/main/resources/templates/design/map/modify_plan.html
@@ -56,7 +56,7 @@
         </div>
         <div>
             <a class="btn btn-primary py-4" style="width:100%;"
-               th:href="@{|/travel/design/detail/${plan.id}?order=1|}"
+               th:href="@{|/travel/design/plan/detail/${plan.id}?order=1|}"
             >저장</a>
         </div>
     </div>
