--- a/src/main/resources/templates/design/map/plan_detail.html
+++ b/src/main/resources/templates/design/map/plan_detail.html
@@ -1,12 +1,12 @@
 <html layout:decorate="~{layout/layout}">
 <div layout:fragment="content">
 
-    <div class="container">
+    <div class="container mt-2">
         <div class="justify-content-between d-flex">
             <h1 th:text="${plan.title}"></h1>
-            <div>
-                <button>수정</button>
-                <button>삭제</button>
+            <div class="d-flex w-25">
+                <button class="w-50 h-100">수정</button>
+                <button class="w-50 h-100">삭제</button>
             </div>
         </div>
         <div class="card card w-100 h-25">
