card의 title 클릭시 상세 페이지로 이동

--- a/src/main/resources/templates/design/map/plan_detail.html
+++ b/src/main/resources/templates/design/map/plan_detail.html
@@ -1,7 +1,7 @@
 <html layout:decorate="~{layout/layout}">
 <div layout:fragment="content">
 
-    <div class="container mt-2">
+    <div class="container mt-2 w-100 h-100">
         <div class="justify-content-between d-flex">
             <h1 th:text="${plan.title}"></h1>
             <div class="d-flex w-25">
