--- a/src/main/resources/templates/design/map/plan_list.html
+++ b/src/main/resources/templates/design/map/plan_list.html
@@ -18,7 +18,7 @@
                     <div class="card-footer text-muted border-top py-3">
                         <div>
                             <h4 class="card-title col">
-                                <a class="text-fiord-blue" th:href="@{|/plan/detail/${plan.id}|}"
+                                <a class="text-fiord-blue" th:href="@{|/travel/design/plan/detail/${plan.id}?order=1|}"
                                    th:text="${plan.title}"></a>
                             </h4>
                         </div>
