버튼 css로 꾸밈

--- a/src/main/resources/templates/design/map/plan_detail.html
+++ b/src/main/resources/templates/design/map/plan_detail.html
@@ -5,8 +5,8 @@
         <div class="justify-content-between d-flex">
             <h1 th:text="${plan.title}"></h1>
             <div class="d-flex w-25">
-                <button class="w-50 h-100">수정</button>
-                <button class="w-50 h-100">삭제</button>
+                <button class="w-50 h-100 btn btn-info mr-2">수정</button>
+                <button class="w-50 h-100 btn btn-danger">삭제</button>
             </div>
         </div>
         <div class="card card w-100 h-25">
