--- a/src/main/resources/templates/find_id_form.html
+++ b/src/main/resources/templates/find_id_form.html
@@ -9,14 +9,14 @@
             <h4>아이디 찾기</h4>
         </div>
     </div>
-    <form th:action="@{/user/find_id}" th:object="${FindIdForm}" method="post">
+    <form th:action="@{/user/find_id}" th:object="${findIdForm}" method="post">
 
 <!--        <div th:replace="form_errors :: formErrorsFragment"></div>-->
 
-<!--        <div class="mb-3">-->
-<!--            <label class="form-label">이메일</label>-->
-<!--            <input type="email" th:field="*{email}" class="form-control">-->
-<!--        </div>-->
+        <div class="mb-3">
+            <label class="form-label">이메일</label>
+            <input type="email" th:field="*{email}" class="form-control">
+        </div>
         <button type="submit" class="btn btn-primary">아이디 찾기</button>
     </form>
 </div>
