비밀번호 찾기 메일을 보내면 랜덤값으로 비밀번호 변경

--- a/src/main/resources/templates/find_pw_form.html
+++ b/src/main/resources/templates/find_pw_form.html
@@ -9,7 +9,7 @@
             <h4>비밀번호 찾기</h4>
         </div>
     </div>
-    <form th:action="@{/user/find_id}" th:object="${findPwForm}" method="post">
+    <form th:action="@{/user/find_pw}" th:object="${findPwForm}" method="post">
 
         <div th:replace="form_errors :: formErrorsFragment"></div>
 
