--- a/src/main/resources/templates/design/map/plan_detail.html
+++ b/src/main/resources/templates/design/map/plan_detail.html
@@ -2,15 +2,24 @@
 <div layout:fragment="content">
 
     <div class="container mt-2 w-100 h-100">
-        <div class="justify-content-between d-flex">
+        <div class="justify-content-between d-flex mb-2">
             <h1 th:text="${plan.title}"></h1>
             <div class="d-flex w-25">
-                <button class="w-50 h-100 btn btn-info mr-2">수정</button>
-                <button class="w-50 h-100 btn btn-danger">삭제</button>
+                <a class="w-50 h-100 btn btn-info mr-2"
+                   th:href="@{|/travel/design/modification/${plan.id}?order=1|}">수정
+                </a>
+                <a class="w-50 h-100 btn btn-danger" onclick="if(!confirm('정말로 삭제하시겠습니까?')) return false;"
+                   th:href="@{|/travel/design/plan/delete/${plan.id}|}">삭제
+                </a>
             </div>
         </div>
-        <div class="card card w-100 h-25">
-            날짜 이동 바
+        <div class="w-100 h-25 d-flex mb-2 justify-content-start overflow-scroll" style="white-space: nowrap;">
+            <div class="card card py-3 px-5" th:each="courses : ${plan.courseList}">
+                <a th:if="${courses.id != course.id}"
+                   th:href="@{|/travel/design/plan/detail/${plan.id}?order=${courses.orders}|}"
+                   th:text="|${courses.orders}일차|"></a>
+                <a class="font-weight-bold" th:if="${courses.id == course.id}" th:text="|${courses.orders}일차|"></a>
+            </div>
         </div>
         <div class="d-flex">
             <div class="card card" style="width:35%; height:70%;">
@@ -19,7 +28,8 @@
             <div class="card card" style="width:65%; height: 70%;">
                 <div id="map" style="width:100%;height:350px;"></div>
 
-                <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=3398f87064ef2d4f364684990589c167&libraries=services"></script>
+                <script type="text/javascript"
+                        src="//dapi.kakao.com/v2/maps/sdk.js?appkey=3398f87064ef2d4f364684990589c167&libraries=services"></script>
                 <script>
                     var mapContainer = document.getElementById('map'), // 지도를 표시할 div
                         mapOption = {
@@ -34,7 +44,7 @@
                     var geocoder = new kakao.maps.services.Geocoder();
 
                     // 주소로 좌표를 검색합니다
-                    geocoder.addressSearch('제주특별자치도 제주시 첨단로 242', function(result, status) {
+                    geocoder.addressSearch('제주특별자치도 제주시 첨단로 242', function (result, status) {
 
                         // 정상적으로 검색이 완료됐으면
                         if (status === kakao.maps.services.Status.OK) {
