여행지 상세페이지 장바구니 담기 구현#2

--- a/src/main/resources/templates/spot/addSpotAtBusket.html
+++ b/src/main/resources/templates/spot/addSpotAtBusket.html
@@ -1,14 +1,45 @@
 <html layout:decorate="~{layout/layout}">
 <div layout:fragment="content">
-    <form action="/travel/design/insertSpot2" method="post">
-        <span th:text="${spotDto.id}"></span>
-        <select name="planId" id="plans">
-            <th:block th:each="plan : ${plans}">
-                <option th:value="${plan.Id}" th:text="${plan.title}"></option>
-            </th:block>
-            <input type="submit" value="Submit">
-        </select>
-        <input type="hidden" name="spotId" th:value="${spotDto.id}">
-    </form>
+    <div id="cart" class="p-3">
+        <div class="py-1">
+            <span>여행지 이름 : </span>
+            <span th:text="${spotDto.name}"></span>
+        </div>
+        <div class="py-1">
+            <span>여행지 주소 : </span>
+            <span th:text="${spotDto.address}"></span>
+        </div>
+        <form class="py-1" action="/travel/design/insertSpot2" method="post">
+            <span>
+                여행 계획 :
+            </span>
+            <select name="planId" id="plans">
+                <th:block th:each="plan : ${plans}">
+                    <option th:value="${plan.Id}" th:text="${plan.title}"></option>
+                </th:block>
+            </select>
+            <input type="hidden" name="spotId" th:value="${spotDto.id}">
+            <button class="btn btn-primary mx-3" type="submit">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bag-heart" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M10.5 3.5a2.5 2.5 0 0 0-5 0V4h5v-.5Zm1 0V4H15v10a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V4h3.5v-.5a3.5 3.5 0 1 1 7 0ZM14 14V5H2v9a1 1 0 0 0 1 1h10a1 1 0 0 0 1-1ZM8 7.993c1.664-1.711 5.825 1.283 0 5.132-5.825-3.85-1.664-6.843 0-5.132Z"></path>
+                </svg>
+                담기
+            </button>
+        </form>
+    </div>
 </div>
 </html>
+<style>
+    #cart {
+        height: 300px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background-color: white;
+        border-style: solid;
+        border-width: 1px;
+        border-color: gray;
+        border-radius: 5px;
+    }
+</style>
