--- a/src/main/resources/templates/spot/spotDetail.html
+++ b/src/main/resources/templates/spot/spotDetail.html
@@ -47,7 +47,9 @@
                             <br/>
                             <form action="/spot/addBusket" method="get">
                                 <input type="hidden" name="spotId" th:value="${spotDto.id}">
-                                <button type="submit" formaction="/spot/addBusket" class="mt-2 mb-2 btn btn-sm btn-pill btn-outline-primary mx-auto" style="width: 70px;">담기</button>
+                                <button type="submit" formaction="/spot/addBusket" class="mt-2 mb-2 btn btn-sm btn-pill btn-outline-primary mx-auto" style="width: 70px;">
+                                    담기
+                                </button>
                             </form>
                         </li>
                     </ul>
