--- a/src/main/resources/templates/design/map/plan_detail.html
+++ b/src/main/resources/templates/design/map/plan_detail.html
@@ -1,80 +1,93 @@
 <html layout:decorate="~{layout/layout}">
-<div layout:fragment="content">
-
-    <div class="container mt-2 w-100 h-100">
-        <div class="justify-content-between d-flex mb-2">
-            <h1 th:text="${plan.title}"></h1>
-            <div class="d-flex w-25" style="align-items: center;">
-                <a class="w-50 h-100 btn btn-info mr-2" style="align-items: center;"
-                   th:href="@{|/travel/design/modification/${plan.id}?order=1|}">수정
-                </a>
-                <a class="w-50 h-100 btn btn-danger" onclick="if(!confirm('정말로 삭제하시겠습니까?')) return false;"
-                   style="align-items: center;"
-                   th:href="@{|/travel/design/plan/delete/${plan.id}|}">삭제
-                </a>
+<div layout:fragment="content" class="mt-3 container justify-content-around" style="width: 95%; min-height: 100%; position:relative;">
+    <!--제목과 수정, 삭제 버튼-->
+    <div class="justify-content-between d-flex mb-2" style="height: 10%;">
+        <h1 th:text="${plan.title}"></h1>
+        <div class="d-flex w-25" style="align-items: center;">
+            <a class="w-50 h-100 btn btn-info mr-2" style="align-items: center;"
+               th:href="@{|/travel/design/modification/${plan.id}?order=1|}">수정
+            </a>
+            <a class="w-50 h-100 btn btn-danger" onclick="if(!confirm('정말로 삭제하시겠습니까?')) return false;"
+               style="align-items: center;"
+               th:href="@{|/travel/design/plan/delete/${plan.id}|}">삭제
+            </a>
+        </div>
+    </div>
+    <!--일차 이동 바-->
+    <div class="w-100 d-flex mb-2 justify-content-start" style="height: 10%; white-space: nowrap; overflow: auto;">
+        <div class="card card py-3 px-5 mr-2" th:each="courses : ${plan.courseList}">
+            <a th:if="${courses.id != course.id}"
+               th:href="@{|/travel/design/plan/detail/${plan.id}?order=${courses.orders}|}"
+               th:text="|${courses.orders}일차|"></a>
+            <a class="font-weight-bold" th:if="${courses.id == course.id}" th:text="|${courses.orders}일차|"></a>
+        </div>
+    </div>
+    <!--여행지 코스 정보 / 지도-->
+    <div class="d-flex justify-content-around" style="height: 80%;">
+        <!--코스 정보-->
+        <div class="card card overflow-scroll container mx-1 row" style="width:35%; min-height:100%;">
+            <div class="border-bottom border-1 py-1 my-1" th:each="spot : ${course.spotList}">
+                    <h5 href="#" th:text="${spot.name}"></h5>
+                    <a href="#" th:text="${spot.address}"></a>
             </div>
         </div>
-        <div class="w-100 h-25 d-flex mb-2 justify-content-start" style="white-space: nowrap; overflow: auto;">
-            <div class="card card py-3 px-5 mr-2" th:each="courses : ${plan.courseList}">
-                <a th:if="${courses.id != course.id}"
-                   th:href="@{|/travel/design/plan/detail/${plan.id}?order=${courses.orders}|}"
-                   th:text="|${courses.orders}일차|"></a>
-                <a class="font-weight-bold" th:if="${courses.id == course.id}" th:text="|${courses.orders}일차|"></a>
-            </div>
-        </div>
-        <div class="d-flex">
-            <div class="card card overflow-scroll container mr-3 row" style="width:35%; max-height:70%;">
-                <div class="my-2 border-bottom border-1" th:each="spot : ${course.spotList}">
-                    <div>
-                        <h5 href="#" th:text="${spot.name}"></h5>
-                        <a href="#" th:text="${spot.address}"></a>
-                    </div>
-                </div>
-            </div>
-            <div class="card card container" style="width:65%; height: 70%;">
-                <div id="map" style="width:100%;height:350px;"></div>
+        <!--지도-->
+        <div class="card card container mx-1" style="width:65%; height:100%;">
+            <!--지도-->
+            <div id="map" style="width:100%;height:350px;"></div>
 
-                <script type="text/javascript"
-                        src="//dapi.kakao.com/v2/maps/sdk.js?appkey=3398f87064ef2d4f364684990589c167&libraries=services"></script>
-                <script>
-                    var mapContainer = document.getElementById('map'), // 지도를 표시할 div
-                        mapOption = {
-                            center: new kakao.maps.LatLng(33.450701, 126.570667), // 지도의 중심좌표
-                            level: 3 // 지도의 확대 레벨
-                        };
+            <script type="text/javascript"
+                    src="//dapi.kakao.com/v2/maps/sdk.js?appkey=3398f87064ef2d4f364684990589c167&libraries=services"></script>
+            <script>
+                var mapContainer = document.getElementById('map'), // 지도를 표시할 div
+                    mapOption = {
+                        center: new kakao.maps.LatLng(33.450701, 126.570667), // 지도의 중심좌표
+                        level: 3 // 지도의 확대 레벨
+                    };
 
-                    // 지도를 생성합니다
-                    var map = new kakao.maps.Map(mapContainer, mapOption);
+                var map = new kakao.maps.Map(mapContainer, mapOption); // 지도를 생성합니다
 
-                    // 주소-좌표 변환 객체를 생성합니다
-                    var geocoder = new kakao.maps.services.Geocoder();
+                // 마커를 표시할 위치와 title 객체 배열입니다
+                var positions = [
+                    {
+                        title: '카카오',
+                        latlng: new kakao.maps.LatLng(33.450705, 126.570677)
+                    },
+                    {
+                        title: '생태연못',
+                        latlng: new kakao.maps.LatLng(33.450936, 126.569477)
+                    },
+                    {
+                        title: '텃밭',
+                        latlng: new kakao.maps.LatLng(33.450879, 126.569940)
+                    },
+                    {
+                        title: '근린공원',
+                        latlng: new kakao.maps.LatLng(33.451393, 126.570738)
+                    }
+                ];
 
-                    // 주소로 좌표를 검색합니다
-                    geocoder.addressSearch('제주특별자치도 제주시 첨단로 242', function (result, status) {
+                // 마커 이미지의 이미지 주소입니다
+                var imageSrc = "https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/markerStar.png";
 
-                        // 정상적으로 검색이 완료됐으면
-                        if (status === kakao.maps.services.Status.OK) {
+                for (var i = 0; i < positions.length; i++) {
 
-                            var coords = new kakao.maps.LatLng(result[0].y, result[0].x);
+                    // 마커 이미지의 이미지 크기 입니다
+                    var imageSize = new kakao.maps.Size(24, 35);
 
-                            // 결과값으로 받은 위치를 마커로 표시합니다
-                            var marker = new kakao.maps.Marker({
-                                map: map,
-                                position: coords
-                            });
+                    // 마커 이미지를 생성합니다
+                    var markerImage = new kakao.maps.MarkerImage(imageSrc, imageSize);
 
-                            // 인포윈도우로 장소에 대한 설명을 표시합니다
-                            var infowindow = new kakao.maps.InfoWindow({
-                                content: '<div style="width:150px;text-align:center;padding:6px 0;">우리회사</div>'
-                            });
-                            infowindow.open(map, marker);
-
-                            // 지도의 중심을 결과값으로 받은 위치로 이동시킵니다
-                            map.setCenter(coords);
-                        }
+                    // 마커를 생성합니다
+                    var marker = new kakao.maps.Marker({
+                        map: map, // 마커를 표시할 지도
+                        position: positions[i].latlng, // 마커를 표시할 위치
+                        title: positions[i].title, // 마커의 타이틀, 마커에 마우스를 올리면 타이틀이 표시됩니다
+                        image: markerImage // 마커 이미지
                     });
-                </script>
-            </div>
+                }
+            </script>
+            <!--지도 끝-->
         </div>
     </div>
 </html>
