--- a/src/main/resources/templates/layout/fragments/sidebar.html
+++ b/src/main/resources/templates/layout/fragments/sidebar.html
@@ -91,10 +91,17 @@
                                 <a class="dropdown-item notification__all text-center" href="#"> View all Notifications </a>
                             </div>
                         </li>
-                        <li class="nav-item dropdown p-2">
+                        <!-- 비로그인 렌더링-->
+                        <li class="nav-item dropdown p-2" sec:authorize="isAnonymous()">
+                            <a class="nav-link text-nowrap px-3" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+                                <span class="d-none d-md-inline-block">로그인</span>
+                            </a>
+                        </li>
+                        <!-- 로그인 렌더링-->
+                        <li class="nav-item dropdown p-2" sec:authorize="isAuthenticated()">
                             <a class="nav-link dropdown-toggle text-nowrap px-3" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
                                 <i class="material-icons account_circle">&#xe853;</i>
-                                <span class="d-none d-md-inline-block">Sierra Brooks</span>
+                                <span class="d-none d-md-inline-block">아이디</span>
                             </a>
                             <div class="dropdown-menu dropdown-menu-small">
                                 <a class="dropdown-item" href="user-profile-lite.html">
