--- a/src/main/resources/templates/user/find_id_form.html
+++ b/src/main/resources/templates/user/find_id_form.html
@@ -11,7 +11,7 @@
     </div>
     <form th:action="@{/user/find_id}" th:object="${findIdForm}" method="post">
 
-<!--        <div th:replace="form_errors :: formErrorsFragment"></div>-->
+        <div th:replace="user/form_errors :: formErrorsFragment"></div>
 
         <div class="mb-3">
             <label class="form-label">이메일</label>
