--- a/src/main/resources/templates/user/find_pw_form.html
+++ b/src/main/resources/templates/user/find_pw_form.html
@@ -11,7 +11,7 @@
     </div>
     <form th:action="@{/user/find_pw}" th:object="${findPwForm}" method="post">
 
-        <div th:replace="form_errors :: formErrorsFragment"></div>
+        <div th:replace="user/form_errors :: formErrorsFragment"></div>
 
         <div class="mb-3">
             <label class="form-label">아이디</label>
