--- a/src/main/resources/templates/user/my_page_form.html
+++ b/src/main/resources/templates/user/my_page_form.html
@@ -11,7 +11,7 @@
     </div>
     <form th:action="@{/user/my_page}" th:object="${userEditForm}" method="post">
 
-        <div th:replace="form_errors :: formErrorsFragment"></div>
+        <div th:replace="user/form_errors :: formErrorsFragment"></div>
 
         <div class="mb-3">
             <label class="form-label">닉네임</label>
