--- a/src/main/resources/templates/user/signup_form.html
+++ b/src/main/resources/templates/user/signup_form.html
@@ -11,7 +11,7 @@
     </div>
     <form th:action="@{/user/signup}" th:object="${userCreateForm}" method="post">
 
-        <div th:replace="form_errors :: formErrorsFragment"></div>
+        <div th:replace="user/form_errors :: formErrorsFragment"></div>
 
         <div class="mb-3">
             <label class="form-label">아이디</label>
