--- a/src/main/resources/templates/user/user_access.html
+++ b/src/main/resources/templates/user/user_access.html
@@ -1,8 +1,5 @@
 <!--테스트용 기본 페이지-->
-<html
-        xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-        xmlns:th="http://thymeleaf.org"
-        layout:decorate="~{layout}">
+<html layout:decorate="~{layout/layout}">
 
 <div layout:fragment="content" class="container my-3">
     <div class="my-3 border-bottom">
